# codeguessr

./: .gitignore  CLAUDE.md  Makefile  README.md  angular.json  hatch_build.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
client/: angular.json  package-lock.json  package.json
client/src/: index.html  styles.css
client/src/app/: app.routes.ts
client/src/app/game/: game.component.css  game.component.html  game.component.ts  game.service.ts
client/src/app/results/: results.component.html  results.component.ts
client/src/app/settings/: settings.component.ts
src/: index.html  styles.scss
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts
src/app/components/editor/: _editor-theme.scss  editor.component.html  editor.component.scss  editor.component.ts
src/app/components/menu-bar/: _menu-bar-theme.scss  menu-bar.component.html  menu-bar.component.scss  menu-bar.component.ts  menu-bar.ts
src/app/components/menu-option-explorer/: _menu-option-explorer-theme.scss  menu-option-explorer.component.html  menu-option-explorer.component.scss  menu-option-explorer.component.spec.ts  menu-option-explorer.component.ts
src/app/components/menu-option-game/: menu-option-game.component.html  menu-option-game.component.scss  menu-option-game.component.spec.ts  menu-option-game.component.ts
src/app/components/menu-option-results/: menu-option-results.component.html  menu-option-results.component.spec.ts  menu-option-results.component.ts
src/app/services/: code.service.ts
src/app/state/: game.actions.ts  game.effects.ts  game.reducer.ts  game.selector.ts  index.ts
src/app/types/: file.types.ts
src/codeguessr/: __main__.py  cli.py  game.py  server.py
tests/: conftest.py  helpers.py
tests/e2e/: conftest.py  helpers.py  test_game_page.py  test_results_page.py  test_settings_page.py
tests/integration/: conftest.py  helpers.py  test_game_flow.py  test_new_game.py  test_spa.py  test_submit_guess.py
tests/unit/: test_game_session.py  test_obscure.py  test_pick_highlight.py  test_round_state.py  test_scan_directory.py
